# Galaxy-Encryption

./: LICENSE  Pipfile  README.md  pyproject.toml
helpfulFiles/: buildModule.py  mainDistribute.py  newVersion.md  testDistribute.py
